# cppcheats

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  cast.cpp  cast.h  compressor.cpp  compressor.h  constant.cpp  convert.cpp  convert.h  json.cpp  json.h  main.cpp  parallel.cpp  person.pb.cc  person.pb.h  proxy.cpp  proxy.h  resource_manager.cpp  resource_manager.h  sockets.cpp  sockets.h  structbinding.cpp  structbinding.h  tbb_usages.h  traits.cpp  traits.h  xmake.lua
idl/pb/: person.proto
infra/: cast.cpp  cast.h  compressor.cpp  compressor.h  constant.h  convert.cpp  convert.h  json.cpp  json.h  parallel.h  resource_manager.cpp  resource_manager.h  tbb_usages.cc  tbb_usages.h
meta/: v1.h
proto/: prototest.cpp  prototest.h
routine/:  demo.h
uml/: polymorphism.puml
